# QQMusic-ID-Injector

./: Cargo.toml  GEMINI.md  LICENSE  README.md
.github/workflows/: ci.yml  codeql.yml  release.yml
installer/: Cargo.toml
installer/src/: main.rs
payload/: Cargo.toml  build.rs
payload/src/: lib.rs  seh.c
