[package]
name = "payload"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
minhook = "0.8.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"

[build-dependencies]
cc = "1.0"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Media",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
